# mini-project

./: DX_OO반_OO조.pptx  __README.md_Error.txt  ___All_Errors.txt  pyproject.toml
data/processed/: 20251105_000111__day3__2025년-디지털-헬스케어-기술개발-및-사업화-지원사업-공고-세부사항.md  20251105_000118__day3__2025년-디지털-헬스케어-기술개발-및-사업화-지원사업-공고의-세부-공고-내용-및-지원-조건.md
indices/day2/: docs.jsonl  faiss.index
student/: agent.py  final_todo.md  overall_pipeline.md  overall_sequence.md  prompt.py
student/common/: fs_utils.py  merge.py  schemas.py  writer.py
student/day1/: agent.py  day1_pipeline.md  day1_sequence.md  day1_todo.md  smoke_test.py
student/day1/impl/: __init__.py  agent.py  finance_client.py  merge.py  tavily_client.py  web_search.py
student/day2/: agent.py  day2_pipeline.md  day2_sequence.md  day2_todo.md
student/day2/impl/: build_index.py  embeddings.py  ingest.py  rag.py
student/day3/: agent.py  day3_pipeline.md  day3_sequence.md  day3_todo.md
student/day3/impl/: __init__.py  agent.py  fetchers.py  normalize.py  pipeline.py  rank.py
